--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,4 +1,11 @@
-{%  extends "base.html" %}
-{%  block app_content %}
-    <p>Welcome to Listy!</p>
-{%  endblock %}
+{% extends "base.html" %}
+{% block app_content %}
+    <p>Your lists</p>
+    <ul class="list-group">
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
+{% endblock %}
